# mcp-tooling

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/codeql/: codeql-config.yml
.github/workflows/: auto-merge.yml  deploy-duffel-hetzner.yml  deploy-google-workspace-hetzner.yml  deploy-mcp-server.yml  diag-reusable-mirror.yml  diag-ssh-key.yml  sync-environment-options.yml  test.yml  update-endpoints.yml
.openclaw/: agent-config.yaml
config/: dat-contract.yaml  endpoints.yaml
config/servers/: amadeus-hotels.yaml  duffel.yaml  google-workspace.yaml  trivago.yaml
docs/: authoring-server.md  github-actions-secrets-fragment.md  github-actions-secrets.md
docs/integrations/: amadeus-hotels-mcp.md  google-workspace-mcp.md  mcp-endpoint-discovery.md  mcp-integration-shapes.md  serverspec-refactor.md
mcp_tooling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
runtime/: __init__.py  allowlist.py  base.py  dotenv_contract.py  health.py  http_server.py  registry.py  secrets.py  server_spec.py  stdio_server.py  streamable_http_server.py
scripts/ci/: check-no-plaintext-secrets.py  endpoint_registry.py  generate-secrets-doc.py  print-endpoint.py  render-agent-tokens.py  validate-workflow-contract.py
scripts/deploy/: install-amadeus-hotels-vm.sh  install-google-workspace-vm.sh  install-mcp-server.sh  install-vm.sh
servers/amadeus_hotels/: __init__.py  __main__.py  client.py  config.example.env
servers/duffel/: __init__.py  __main__.py  client.py  config.example.env
servers/google_workspace/: __init__.py  __main__.py  client.py  config.example.env  scope_guard.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  backend.tfvars.example  main.tf  outputs.tf  terraform.tfvars.example
tests/bats/: install-amadeus-hotels.bats  install-duffel.bats  (+4 more)
(+38 files in other folders)
